@@ -11,6 +11,11 @@ CHANGES
     - Query.select_from(), from_statement() ensure
       that the given argument is a FromClause,
       or Text/Select/Union, respectively.
+      
+    - Fixed bug introduced in 0.5rc4 involving eager 
+      loading not functioning for properties which were
+      added to a mapper post-compile using 
+      add_property() or equivalent.
 
     - Duplicate items in a list-based collection will
       be maintained when issuing INSERTs to
@@ -52,6 +57,10 @@ CHANGES
       in shard API, removed errant result.close()
       left over from the 0.4 version. [ticket:1099]
       [ticket:1228]
+
+    - made Session.merge cascades not trigger autoflush.
+      Fixes merged instances getting prematurely inserted
+      with missing values.
       
 - sql
     - Fixed the import weirdness in sqlalchemy.sql
